--- a/style.css
+++ b/style.css
@@ -54,3 +54,63 @@ body {
   a:hover {
     color: rgb(9, 166, 228);
   }
+  /* --------------------------------------- div 2 ----------------------------------------------------*/
+  .div2 {
+    /* border: 2px solid red; */
+    /* border-radius: 50px 5px; */
+    margin-bottom: 20px;
+    width: 100%;
+    height: 580px;
+    display: flex;
+    flex-direction: row;
+  }
+  .text {
+    width: 50%;
+    height: 600px;
+    /* border: 2px solid yellow; */
+    /* float: left; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .h1text {
+    margin-left: 100px;
+    /* text-align: left; */
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 50px;
+  }
+  .paratext {
+    margin-left: 100px;
+    /* text-align: left; */
+    color: white;
+    /* font-weight: bold; */
+    font-size: larger;
+  }
+  .btn {
+    margin-left: 100px;
+    background-color: rgb(18, 219, 234);
+    font-size: larger;
+    width: 140px;
+    height: 40px;
+    color: white;
+    border: none;
+    /* border-radius: 20px; */
+  }
+  .btn:hover {
+    background-color: rgb(11, 181, 248);
+  }
+  .mobileimg {
+    width: 50%;
+    height: 600px;
+    /* border: 2px solid rgb(107, 9, 65); */
+    /* float: left; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .img1 {
+    width: 500px;
+    height: 500px;
+  }
