--- a/style.css
+++ b/style.css
@@ -114,3 +114,70 @@ body {
     width: 500px;
     height: 500px;
   }
+    /*---------------------------------------------- div3----------------------------------------------- */
+    .div3 {
+      /* border: 2px solid red; */
+      background-color: white;
+      width: 100%;
+      height: 600px;
+    }
+    .h2ser {
+      margin-top: 20px;
+      text-align: center;
+      font-size: 30px;
+    }
+    .paraser {
+      text-align: center;
+      color: black;
+    }
+    span {
+      color: rgb(18, 219, 234);
+    }
+    .service2 {
+      /* border: 2px solid yellow; */
+
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
+    .currencywallet {
+      /* border: 2px solid blue; */
+      background-color: #f9f9f9;
+      padding-top: 20px;
+      width: 25%;
+      margin-top: 50px;
+      height: 300px;
+      text-align: center;
+    }
+    .currencywallet > p {
+      color: black;
+    }
+    .currencywallet1 {
+      margin-left: 100px;
+    }
+    .currencywallet2 {
+      margin-right: 100px;
+    }
+    .imgicon {
+      width: 80px;
+      height: 80px;
+    }
+    a.readmore {
+      text-decoration: none;
+      font-size: larger;
+    }
+    .viewall {
+      text-align: center;
+      padding-top: 30px;
+    }
+    .viewall1 {
+      width: 180px;
+      height: 46px;
+      font-size: 25px;
+      background-color: rgb(18, 219, 234);
+      color: white;
+      border: none;
+    }
+    .viewall1:hover {
+      background-color: rgb(52, 169, 215);
+    }
