--- a/style.css
+++ b/style.css
@@ -290,3 +290,74 @@ body {
     .icon .fa-brands1:hover {
       color: rgb(18, 219, 234);
     }
+       /* --------------------------------------------div7------------------------------------- */
+       .div7 {
+        margin-top: 20px;
+        /* border: 2px solid yellow; */
+        width: 100%;
+        height: 600px;
+        background-color: white;
+      }
+      .clientdiv {
+        width: 90%;
+        height: 400px;
+        margin-left: 75px;
+        /* border: 2px solid green; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-around;
+      }
+      .clientdiv1 {
+        width: 40%;
+        height: 250px;
+        /* border: 2px solid red; */
+        box-shadow: 5px 5px 5px 5px rgb(195, 182, 182);
+        position: relative;
+      }
+      .clientdiv2 {
+        width: 40%;
+        height: 250px;
+        /* border: 2px solid red; */
+        box-shadow: 5px 5px 5px 5px rgb(195, 182, 182);
+        position: relative;
+      }
+      .clientdiv1 .clientimg1 {
+        border-radius: 100%;
+        position: relative;
+        top: -50px;
+        left: 30px;
+      }
+      .clientdiv2 .clientimg2 {
+        border-radius: 100%;
+        position: relative;
+        top: -50px;
+        left: 30px;
+      }
+      .clientdiv1 p {
+        color: black;
+        position: relative;
+        bottom: 50px;
+        left: 40px;
+      }
+      .fa-quote-left{
+        position: relative;
+        bottom: 100px;
+        left: 460px;
+        font-size: 20px;
+      }
+      .clientdiv2 p {
+        color: black;
+        position: relative;
+        bottom: 50px;
+        left: 40px;
+      }
+      .clientpara {
+        color: black;
+        position: relative;
+        bottom: 50px;
+        left: 40px;
+        font-weight: 100;
+        font-size: 15px;
+        box-sizing: border-box;
+      }
